webcleaner (0.13) unstable; urgency=low

  * fix an assertion error in HttpServer.py: only close the server when
    it is connected
  * add missing second argument to handle_proc function, this prevented
    xml files to be parsed correctly
  * fixed the parser so that <tag/> tags are handled correctly

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 21 May 2001 21:26:58 +0200

webcleaner (0.12) unstable; urgency=low

  * always initialize filter attributes in HttpServer.py
  * minor bugfixes with unintialized vars
  * use FOX and FXPy >= 0.99.167
  * global config object in wc.proxy
  * more status info (get it with http://_webcleaner/)
    hit statistics still need to be filled out
  * added missing return in daemon/posix.py:start()
    now the GUI Proxy buttons are working for POSIX systems
  * new proxy config option "no proxy for" to disable filtering
    for specific sites
  * POST requests no longer block forever
  * include debian/copyright in dist
  * remove #! line from two .py files which are not scripts

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 25 Apr 2001 02:54:46 +0200

webcleaner (0.11) unstable; urgency=low

  * new proxy code: HTTP/1.1 and select() I/O
  * use versioned PID file
  * new CVS module webcleaner2
  * parent proxy support for the new proxy code

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 18 Apr 2001 19:34:49 +0200

webcleaner (0.10) unstable; urgency=low

  * convert config values from unicode to strings
  * rename FilterRule to FolderRule (and all other occurences)

 -- Bastian Kleineidam <calvin@debian.org>  Tue, 10 Apr 2001 00:22:14 +0200

webcleaner (0.9) unstable; urgency=low

  * rename from WebCleaner to webcleaner
  * bumped standards to 3.5.2
  * remove INSTALL from .deb package
  * updated filtering rules
  * implemented filter config update
  * fixed parent proxy support
  * use fast expat XML parsing for configuration; this
    replaces PyXML
  * basic support for non-POSIX systems for daemon.py