@@ -26,7 +26,7 @@ db_version 2.0
 
 package=webcleaner
 DIRLIST="/usr/lib/python2.0/site-packages/wc"
-FILELIST="_webcleaner_configdata.py"
+FILELIST="_webcleaner2_configdata.py"
 SITEPACKAGES="/usr/lib/python2.0/site-packages"
 COMMAND="'import sys,py_compile;py_compile.compile(sys.argv[1])'"
 
@@ -56,6 +56,7 @@ if [ "$1" = "configure" ]; then
     sed -e "s/ port=.*/ port=\"$RET\"/" /etc/$package/$package.conf > /etc/$package/$package.conf.tmp
     mv -f /etc/$package/$package.conf.tmp /etc/$package/$package.conf
 fi
+db_stop
 
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
