@@ -8,7 +8,7 @@ DOCDIR = debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
 #export DH_VERBOSE=1
 
 # This is the debhelper compatability version to use.
-export DH_COMPAT=2
+export DH_COMPAT=3
 
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
