@@ -66,7 +66,8 @@ class HttpServer(Server):
             debug(ALWAYS, 'connect error', self.addr, msg)
 
     def handle_connect(self):
-        # XXX assertion ?
+        if not self.connected:
+            return
         assert self.state == 'connect'
         debug(HURT_ME_PLENTY, 'handle_connect', self)
         self.state = 'client'
