@@ -140,7 +140,7 @@ def main():
     if hasattr(daemon, command):
         msg = getattr(daemon, command)()
         if msg:
-	    print msg
+	    print >> sys.stderr, msg
     else:
         _print_usage(_("Unknown command %s") % command)
 
